# constrain

./: .gitignore  .kin  CLAUDE.md  README.md  component_map.yaml  constraints.yaml  pact.yaml  prompt.md  pyproject.toml  schema_hints.yaml  sops.md  task.md  trust_policy.yaml
contracts/src_constrain_cli/: interface.json  interface.py
contracts/src_constrain_engine/: interface.py
contracts/src_constrain_models/: interface.json  interface.py
contracts/src_constrain_posture/: interface.json  interface.py
contracts/src_constrain_session/: interface.json  interface.py
contracts/src_constrain_synthesizer/: interface.json  interface.py
decomposition/: decisions.json  interview.json  tree.json
docs/: index.html
src/constrain/: __init__.py  archive.py  cli.py  engine.py  kindex_integration.py  mcp_server.py  models.py  posture.py  session.py  synthesizer.py
src/src_constrain_synthesizer/: synthesizer.py
tests/: test_archive.py  test_backend_config.py  test_engine_synthesis_validation.py  test_integrated_artifacts.py  test_kindex_integration.py
tests/cli/: contract_test_suite.json
tests/engine/: contract_test_suite.json
tests/models/: contract_test_suite.json
tests/posture/: contract_test_suite.json
tests/root/: contract_test_suite.json
tests/session/: contract_test_suite.json
tests/smoke/: test_constrain_cli.py  test_constrain_engine.py  test_constrain_models.py  test_constrain_posture.py  test_constrain_session.py  test_constrain_synthesizer.py
tests/src_constrain_cli/: contract_test.py  contract_test_suite.json
(+39 files in other folders)
