[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constrain"
version = "0.1.0"
description = "Find the boundary between specification and intent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
constrain = "constrain.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/constrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
